@@ -65,6 +65,16 @@
         href="https://trac.cyberduck.io/ticket/10115">#10115</a>)
     </li>
     <li><span class="label label-success">Feature</span> Allow password input in bookmark window</li>
+    <li><span class="label label-success">Feature</span> Create download authorization for files to share
+        (Backblaze B2)
+    </li>
+    <li><span class="label label-success">Feature</span> Make a file public and copy URL to share (Google
+        Drive)
+    </li>
+    <li><span class="label label-success">Feature</span> Create temporary link (4 hours) for file to share
+        (Dropbox)
+    </li>
+    <li><span class="label label-success">Feature</span> Create shared link for file (Microsoft OneDrive)</li>
     <li><span class="label label-warning">Bugfix</span> Existing metadata not displayed (S3) (<a
         href="https://trac.cyberduck.io/ticket/10621">#10647</a>)
     </li>
