@@ -4,6 +4,10 @@ https://cyberduck.io/
 7.0.0
 - [Feature] Segmented downloads with multiple connections per file (#10115)
 - [Feature] Allow password input in bookmark window
+- [Feature] Create download authorization for files to share (Backblaze B2)
+- [Feature] Make a file public and copy URL to share (Google Drive)
+- [Feature] Create temporary link (4 hours) for file to share (Dropbox)
+- [Feature] Create shared link for file (Microsoft OneDrive)
 - [Bugfix] Existing metadata not displayed (S3) (#10647)
 - [Bugfix] Browser always shows modification time in UTC timezone (Windows) (#10629)
 
